# connect-four-ai

./: .envrc  .gitignore  README.md  pyproject.toml
src/connect_four/ai/: __init__.py  mcts.py  minimax.py
src/connect_four/app/: __init__.py  api_router.py  app.py  connect_four_service.py  dependencies.py  schemas.py
src/connect_four/app/static/: index.css
src/connect_four/app/templates/: home.html  index.html
src/connect_four/app/templates/partials/: game.html  grid.html
src/connect_four/core/: __init__.py  connect_four.py  exceptions.py
tests/: test_ai.py  test_ai_mcts.py  test_ai_minimax.py  test_app.py  test_app_api.py  test_app_e2e.py  test_connect_four.py
